@@ -71,7 +71,8 @@
 			<vmArg>-Dorg.jboss.byteman.transform.all</vmArg>
 			<vmArg>-Dorg.jboss.byteman.debug</vmArg-->
 			<vmArg>-XX:+HeapDumpOnOutOfMemoryError</vmArg>
-			<vmArg>-Xmx3G</vmArg>
+			<vmArg>-Xmx1G</vmArg>
+			<vmArg>-Xlog:gc</vmArg>
 			<!-- "Not supported in OpenJDK" <vmArg>-XX:+UnlockCommercialFeatures</vmArg>
 			<vmArg>-XX:+FlightRecorder</vmArg>
 			<vmArg>-XX:StartFlightRecording=name=aut,delay=60s,filename=aut.jfr,dumponexit=true</vmArg>-->
